test/manifests/webhook/webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kms-vault-validating-webhook
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kms-vault-validating-webhook
  template:
    metadata:
      labels:
        name: kms-vault-validating-webhook
    spec:
      containers:
        - name: kms-vault-validating-webhook
          image: patoarvizu/kms-vault-operator:latest
          imagePullPolicy: IfNotPresent
          command:
          - kms-vault-validating-webhook
          - -tls-cert-file
          - /tls/tls.crt
          - -tls-key-file
          - /tls/tls.key
          ports:
          - name: https
            containerPort: 4443
          volumeMounts:
            - name: tls
              mountPath: /tls
      volumes:
      - name: tls
        secret:
          secretName: kms-vault-validating-webhook

---

apiVersion: v1
kind: Service
metadata:
  name: kms-vault-validating-webhook
  namespace: vault
  labels:
    app: kms-vault-validating-webhook
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 443
      targetPort: https
  selector:
    name: kms-vault-validating-webhook

---

kind: ValidatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1beta1
metadata:
  name: kms-vault-validating-webhook
  annotations:
    cert-manager.io/inject-ca-from: vault/kms-vault-validating-webhook
webhooks:
- name: kms-vault-validating-webhook.patoarvizu.dev
  rules:
  - apiGroups:
    - k8s.patoarvizu.dev
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kmsvaultsecrets
    - partialkmsvaultsecrets
  failurePolicy: Fail
  clientConfig:
    caBundle: Cg==
    service:
      namespace: vault
      name: kms-vault-validating-webhook
  namespaceSelector:
    matchExpressions:
    - key: kms-vault-operator
      operator: DoesNotExist
